sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: not found: value gertNombreValeurs
		for(i<- gertNombreValeurs()-2-j to 0){
                        ^